forgot to change the package name, oops 😬

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pronoun",
+  "name": "pronouns",
   "version": "1.0.0",
   "description": "personal pronoun helper",
   "main": "src/index.js",
