--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pronouns",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "personal pronoun helper",
   "main": "src/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/katacarbix/pronoun.js"
+    "url": "git+https://github.com/katacarbix/pronouns.js"
   },
   "keywords": [
     "pronoun",
@@ -23,7 +23,7 @@
   "author": "Reese Jacobson <me@katacarbix.xyz>",
   "license": "AGPL-3.0",
   "bugs": {
-    "url": "https://github.com/katacarbix/pronoun.js/issues"
+    "url": "https://github.com/katacarbix/pronouns.js/issues"
   },
-  "homepage": "https://github.com/katacarbix/pronoun.js#readme"
+  "homepage": "https://github.com/katacarbix/pronouns.js#readme"
 }
