--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "pronouns",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "personal pronoun helper",
   "main": "src/index.js",
   "scripts": {
-    "test": "node test/"
+    "test": "node test/",
+    "dist": "browserify src -o dist/index.js --standalone pronouns"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/katacarbix/pronouns.js/issues"
   },
-  "homepage": "https://github.com/katacarbix/pronouns.js#readme"
+  "homepage": "https://github.com/katacarbix/pronouns.js#readme",
+  "devDependencies": {
+    "browserify": "^16.5.2"
+  }
 }
