--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "pronouns",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "personal pronoun helper",
   "main": "src/index.js",
   "scripts": {
     "test": "node test/",
-    "dist": "browserify src -o dist/index.js --standalone pronouns"
+    "dist": "browserify src -o dist/index.js --standalone pronouns",
+    "dev": "concurrently --names 'bundle,server' --prefix-colors 'red,blue' --kill-others 'watchify src -o dist/index.js --standalone pronouns -v' 'http-server .'"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,9 @@
   },
   "homepage": "https://github.com/katacarbix/pronouns.js#readme",
   "devDependencies": {
-    "browserify": "^16.5.2"
+    "browserify": "^16.5.2",
+    "concurrently": "^5.3.0",
+    "http-server": "^0.12.3",
+    "watchify": "^3.11.1"
   }
 }
