--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.3",
   "description": "personal pronoun helper",
   "main": "src/index.js",
+  "types": "types/index.d.ts",
   "scripts": {
     "test": "node test/",
     "dist": "browserify src -o dist/index.js --standalone pronouns",
